html1-css1 pajina inicial completa. y css inicial completo. herror de imajenes

--- a/enlaces/fotografia.html
+++ b/enlaces/fotografia.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="../css/fotografia.css">
 	<meta charset="utf-8">
 	<meta name="vewport" content="width=device-width, user-scalable=no inicial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
 
 	<title>comenzando con la fotografia</title>
@@ -31,7 +32,34 @@
 	</div>
 	<div>
 		<img src="../img/retrato-2.jpg" alt="imagen-secundaria-derecha" id="imgder">
-	</div>
 
 </body>
+<footer>
+	   <div id="contacto">
+          <h2>Contacto</h2>
+          andrescovaleda@gmail.com <br/>
+          calle 71 # 01 02 <br/>
+          3102015444
+        </div>
+
+        <div id="terminos">
+          <h2>T&eacute;rminos</h2>
+          Aplican terminos y condiciones
+        </div>
+
+        <div id="redes">
+          <h2>Redes Sociales</h2>
+          Facebook: Fotografia AC <br/>
+          Instagram: foto_Andres C <br/>
+          Twitter: @andresvaleda <br/>
+        </div>
+
+        <div id="derechos">
+          <h2>Derechos</h2>
+          Andres Covaleda © CopyRight - 2018
+        </div>
+
+	
+</footer>
+	</div>
 </html>
