estilos-css-paj-1-2

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 			<div id="secundario">
 				<figure class="secundaria">
-					<img src="img/paisaje-1.jpg" alt="imagen-secundaria-izquierda" id="imgizq">
+					<img src="img/paisaje-1.jpg" alt="imagen-secundaria-izquierda" id="secizq">
 					<figcaption>Paiasaje</figcaption>
 
 				</figure>
 				
 				<figure class="secundaria">
-						<img src="img/retrato-1.jpg" alt="imagen-secundaria-derecha" id="imgder">
+						<img src="img/retrato-1.jpg" alt="imagen-secundaria-derecha" id="secder">
 						<figcaption>Retrato</figcaption>
 					
 				</figure>
