--- a/enlaces/fotografia.html
+++ b/enlaces/fotografia.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 	>
-	<link rel="stylesheet" type="text/css" href="../css/fotografia.css">
 	<meta charset="utf-8">
 	<meta name="vewport" content="width=device-width, user-scalable=no inicial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-
-
-	<title>comenzando con la fotografia</title>
+	<link rel="stylesheet" type="text/css" href="../css/fotografia.css">
+	 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	 <title>comenzando con la fotografia</title>
 
 </head>
 
@@ -17,7 +15,7 @@
 
 		<header id="encabezado">
 
-			<h1>comenzando con la fotografia</h1>
+			<h1 id="titulo">comenzando con la fotografia</h1>
 
 			<nav id="menu-principal">
 			
@@ -29,11 +27,19 @@
 
 			
 		</header>
-	</div>
-	<div>
-		<img src="../img/retrato-2.jpg" alt="imagen-secundaria-derecha" id="imgder">
+	
+	<div id="principal">
 
-</body>
+		<img src="../img/retrato-2.jpg" id="desenfocada" alt="retrato">
+
+		<img src="../img/retrato-2.jpg" alt="retrato">
+		<img src="../img/retrato-2.jpg" alt="retrato">
+		<img src="../img/retrato-2.jpg" alt="retrato">
+		<img src="../img/retrato-2.jpg" alt="retrato">
+		<img src="../img/retrato-2.jpg" alt="retrato">
+	</div>	
+
+
 <footer>
 	   <div id="contacto">
           <h2>Contacto</h2>
@@ -60,6 +66,7 @@
         </div>
 
 	
-</footer>
-	</div>
-</html>
+	</footer>
+   </div>
+</body>
+ </html>
